# mobifarm-simulation

./: README.md  mobifarm.sh  mobofarm.sh
docker/: Dockerfile  docker-compose.yml
docs/: robot.md
simulations/gazebo_models/: .gitignore
src/actuators/mobifarm_description/: CMakeLists.txt  package.xml
src/actuators/mobifarm_description/urdf/: beetlebot.xacro  lidar.txt  mobifarm.gazebo  robot.xacro  sensor.xacro
src/controllers/mobifarm_control/: CMakeLists.txt  package.xml
src/controllers/mobifarm_control/config/: beetlebot_control.yaml
src/controllers/mobifarm_control/launch/: mobifarm_control.launch
src/controllers/mobifarm_control/scripts/: control_6_wheel_4_sterring.py  get_position_velcity.py  keyboard_controller.py  lidar_processing_node.py  set_state_model.py  voice_controller.py
src/mobifarm_gazebo/: CMakeLists.txt  package.xml
src/mobifarm_gazebo/launch/: load_robot.launch  mobifarm_world.launch  robot_empty_world.launch  test_world.launch
src/mobifarm_gazebo/worlds/: mobifarm.world
