<?xml version="1.0"?>
<package>
  <name>mobifarm_gazebo</name>
  <version>0.0.0</version>
  <description>The mobifarm_gazebo package</description>
  <maintainer email="anhrisn@gmail.com">anh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
  </export>
</package>