<?xml version="1.0"?>
<package>
  <name>mobifarm_control</name>
  <version>0.0.0</version>
  <description>The mobifarm_control package</description>

  <maintainer email="anhrisn@gmail.com">anh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>